FileUpload->disk('images')

--- a/.env.production
+++ b/.env.production
@@ -2,7 +2,7 @@ APP_NAME="Ваш дорогой нарколог"
 APP_ENV=local
 APP_KEY=base64:48pdks5rdfLR6b1T4ZOXEUDzbEkfPQh48zXkp/7vB+w=
 APP_DEBUG=false
-APP_URL=http://diploma.dergunov.info
+APP_URL=https://xn--b1abce5bglz.xn--p1ai
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
