Пока все работает

--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,7 @@
 APP_NAME="Ваш дорогой нарколог"
 APP_ENV=local
 APP_KEY=base64:48pdks5rdfLR6b1T4ZOXEUDzbEkfPQh48zXkp/7vB+w=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=https://xn--b1abce5bglz.xn--p1ai
 
 LOG_CHANNEL=stack
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=0.0.0.0
 DB_PORT=3306
 DB_DATABASE=diploma
-DB_USERNAME=root
-DB_PASSWORD=root
+DB_USERNAME=z35325_diploma
+DB_PASSWORD=z35325_diploma
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
