--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,13 @@
   "require": {
     "php": "^8.1",
     "filament/filament": "^2.0",
+    "filament/spatie-laravel-translatable-plugin": "^2.17",
     "guzzlehttp/guzzle": "^7.2",
     "laravel/framework": "^10.10",
     "laravel/sanctum": "^3.2",
     "laravel/tinker": "^2.8",
-    "spatie/laravel-permission": "^5.10"
+    "spatie/laravel-permission": "^5.10",
+    "spatie/laravel-translatable": "^6.5"
   },
   "require-dev": {
     "fakerphp/faker": "^1.9.1",
