--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "require": {
     "php": "^8.1",
+    "awcodes/filament-curator": "^2.7",
     "filament/filament": "^2.0",
     "filament/spatie-laravel-translatable-plugin": "^2.17",
     "guzzlehttp/guzzle": "^7.2",
@@ -16,7 +17,8 @@
     "laravel/sanctum": "^3.2",
     "laravel/tinker": "^2.8",
     "spatie/laravel-permission": "^5.10",
-    "spatie/laravel-translatable": "^6.5"
+    "spatie/laravel-translatable": "^6.5",
+    "z3d0x/filament-fabricator": "^1.1"
   },
   "require-dev": {
     "fakerphp/faker": "^1.9.1",
