--- a/.github/workflows/azure-webapps-php.yml
+++ b/.github/workflows/azure-webapps-php.yml
@@ -19,10 +19,7 @@
 
 name: Build and deploy PHP app to Azure Web App
 
-on:
-  push:
-    branches: [ "main" ]
-  workflow_dispatch:
+on: workflow_dispatch
 
 env:
   AZURE_WEBAPP_NAME: your-app-name    # set this to your application's name
