--- a/composer.json
+++ b/composer.json
@@ -16,14 +16,16 @@
     "laravel/framework": "^10.10",
     "laravel/sanctum": "^3.2",
     "laravel/tinker": "^2.8",
+    "spatie/laravel-login-link": "^1.1",
     "spatie/laravel-permission": "^5.10",
     "spatie/laravel-translatable": "^6.5",
     "z3d0x/filament-fabricator": "^1.1"
   },
   "require-dev": {
+    "barryvdh/laravel-debugbar": "^3.8",
     "fakerphp/faker": "^1.9.1",
     "laravel/breeze": "^1.21",
-    "laravel/pint": "^1.0",
+    "laravel/pint": "^1.10",
     "laravel/sail": "^1.18",
     "mockery/mockery": "^1.4.4",
     "nunomaduro/collision": "^7.0",
