--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "laravel/sanctum": "^3.2",
     "laravel/tinker": "^2.8",
     "spatie/laravel-login-link": "^1.1",
+    "spatie/laravel-markdown": "^2.3",
     "spatie/laravel-permission": "^5.10",
     "spatie/laravel-translatable": "^6.5",
     "z3d0x/filament-fabricator": "^1.1"
