--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
   "require": {
     "php": "^8.1",
     "awcodes/filament-curator": "^2.7",
+    "awcodes/filament-tiptap-editor": "^2.6",
     "filament/filament": "^2.0",
     "filament/spatie-laravel-translatable-plugin": "^2.17",
     "guzzlehttp/guzzle": "^7.2",
